# nade-grind

./: .gitignore  .gitlab-ci.yml  README.md  asset_upload.bb  asset_upload.sh  compile_by_nuitka.py  justfile  pyproject.toml
_scripts/: csv_import.py  nadeshiko_client.py
astro/: LICENSE  astro.config.mjs  package-lock.json  package.json
astro/public/: demo.webm  robots.txt
astro/src/pages/: index.astro
astro/src/utils/: url.ts
data/: words.txt
src/: audio.py  export.py  nadeshiko.py  tools.py  tui.py
zj_layouts/: nadeshiko-dev.kdl
