[project]
name = "nadeshiko-anki-export-grind"
version = "0.1.0"
description = "Export difficult cards from Anki and grind via Nadeshiko examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pygame>=2.6.1",
    "textual>=8.2.5",
]
