[project]
name = "nadeshiko-anki-export-grind"
version = "0.1.0"
description = "Export difficult cards from Anki and grind via Nadeshiko examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "cashews[diskcache]>=7.5.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "patchelf>=0.17.2.4",
    "platformdirs>=4.9.6",
    "pygame>=2.6.1",
    "pyperclip>=1.11.0",
    "textual>=8.2.5",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.2",
    "textual-dev>=1.8.0",
]
